tests/ui/attributes/doc-test-literal.stderr
error: `#![doc(test(...)]` does not take a literal
  --> $DIR/doc-test-literal.rs:3:13
   |
LL | #![doc(test(""))]
   |             ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>
note: the lint level is defined here
  --> $DIR/doc-test-literal.rs:1:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(invalid_doc_attributes)]` implied by `#[deny(warnings)]`

error: aborting due to previous error

